[package]
name = "profile"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
octocrab = "0.51.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
wreq = { version = "5.3.0", features = ["full"] }
wreq-util = { version = "2.2.6", features = ["full"] }
